# taskhut

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  agents.md  demo_export.jsonl  pyproject.toml
.github/workflows/: ci.yml  lint.yml
demo_annotations.db/: cache.db
examples/: demo.py
taskhut/: __init__.py  annotation_tool.py
tests/: test_annotation_tool.py  test_docs.py  test_minimal.py
