[project]
name = "taskhut"
version = "0.0.1"
description = "A data annotation tool with disk-backed caching and task routing"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "pydantic>=2.12.4",
    "polars>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "anthropic>=0.72.0",
    "mofresh>=0.2.6",
    "pre-commit>=3.0.0",
    "marimo",
    "moboard>=0.1.0",
    "mohtml>=0.1.11",
    "mktestdocs>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
